-------------------------------------------------------------------------------
Changes in version 0.07

- Added logging of warnings when crontabs fail to be parsed properly.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.06

- Added support for listing all system crontabs.

- bcron-exec now waits until all the programs its running have exited so
  that email gets sent properly.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.05

- Die with error if executing the shell or wrapper failed in bcron-exec.

- Set up supplemental groups in bcron-exec.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.04

- Fixed (for good this time?) the bug in bcron-exec causing delayed
  execution of programs.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------